Browse button too short fixed (actually pdbid input was too wide)

--- a/client/public/css/status_load.scss
+++ b/client/public/css/status_load.scss
@@ -1,9 +1,9 @@
-
 input {
     border-radius: 4px;
     border: 1px solid #D2D3D6;
     padding: 11px;
     font-size: 0.8rem;
+    box-sizing: border-box;
 }
 
 input:focus {
